--- a/src/Fidget.Extensions.Reflection.csproj
+++ b/src/Fidget.Extensions.Reflection.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard1.4</TargetFramework>
-        <VersionPrefix>1.0.1</VersionPrefix>
+        <VersionPrefix>1.1.0</VersionPrefix>
         <PackageId>Fidget.Extensions.Reflection</PackageId>
         <Authors>Sean Terry</Authors>
         <Description>A fast reflection provider for working with properties.</Description>
@@ -22,6 +22,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
       <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
     </ItemGroup>
 
